# Resolume_Arena_Tool

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_STARTEN.txt  ResolumeAlphaDropper.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GUI.md  GUI_V02.md  PATCH_03_INPUT_STABILITY.md  PATCH_05_EXPORT_BUTTON.md  USAGE.md
presets/: defaults.json
scripts/: build_portable.ps1  build_windows.ps1  release_package.ps1  smoke_portable.ps1  verify_local.ps1
src/resolume_alpha_tool/: __init__.py  app.py  cli.py
src/resolume_alpha_tool/core/: __init__.py  alpha_diagnostics.py  alpha_processor.py  batch.py  batch_export.py  batch_queue.py  diagnostics.py  error_ux.py  exceptions.py  export_report.py  file_watcher.py  gui_settings.py  gui_worker.py  input_resolver.py  logging_config.py  models.py  naming.py  output_validation.py  preset_store.py  presets.py  preview_tools.py  profile_store.py  profiles.py  rembg_runtime.py  reporting.py  resolume_api.py  (+7 more)
tests/: test_alpha_diagnostics.py  test_alpha_effects.py  test_alpha_processor.py  test_app_theme.py  test_batch.py  test_batch_export.py  test_batch_hardening.py  test_batch_queue.py  test_cli.py  test_cli_contract.py  test_error_ux.py  test_export_report.py  test_gui_settings.py  test_gui_tk_contract.py  test_gui_worker.py  test_input_resolver.py  test_logging_config.py  test_naming.py  test_output_validation.py  test_preset_store.py  test_presets.py  test_preview_tools.py  test_profile_store.py  test_profiles.py  test_rembg_runtime.py  test_resolume_api.py  test_resolume_export.py  test_resources_diagnostics_profiles.py  test_settings.py  test_ui_labels.py  test_watch_folder.py  test_workflow_config.py  test_workflow_structure.py
(+2 files in other folders)
