[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resolume-alpha-dropper"
version = "0.1.1"
description = "Local-first single-image transparent PNG exporter for Resolume and shirt/print workflows."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}
authors = [
  {name = "Nils Kubicki"}
]
keywords = ["resolume", "alpha", "background-removal", "png", "shirt-print", "transparent-png", "vj"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
  "Pillow>=10.4,<13",
  "rembg[cpu]>=2.0,<3",
]

[project.optional-dependencies]
rembg = [
  "rembg[cpu]>=2.0,<3",
]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.6,<1",
  "pyinstaller>=6.0,<7",
]

[project.scripts]
alpha-png = "resolume_alpha_tool.cli:main"
alpha-png-gui = "resolume_alpha_tool.app:main"
resolume-alpha = "resolume_alpha_tool.cli:main"
resolume-alpha-gui = "resolume_alpha_tool.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
resolume_alpha_tool = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
